# Interview-Agent-Demo

./: .babelrc  .dockerignore  .gitignore  CRUD_CHECKLIST.md  DEPLOY_README.md  MARIA_DB_CONFIG.md  Pipfile  README.md  REDPLOY_V2.md  dataschema.md  devops.md  frontend.md  interview_agent.db  livekit-integration.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml  deploy.yml
app/: api_routes.py  app.py  config.py  database.py  scoring_agent.py
app/templates/: base.html  edit_profile.html  index.html  interview_room.html  login.html  register.html
backend/: .env.develop  Dockerfile  access_code_manager.py  api_interview_routes.py  api_routes.py  app.py  config.py  create_campaign_from_doc.py  database.py  dataschema.md  email_service.py  gunicorn_config.py  interview_agent.conf  interview_agent.db  interview_agent.service  interview_routes.py  interview_server.conf  interview_server.py  interview_server.service  requirements.txt  scoring_agent.py
backend/app/: .env.develop  agent.py  api_routes.py  app.py  config.py  database.py  document_processor.py  scoring_agent.py
backend/debug/: create_campaign_from_doc.py  optimize_scoring_prompt.py  scoring.py  transcribe.py
backend/livekit/: agent.py  agentold.py  interview_agent.py  interview_api.py  interview_db.sqlite  prompts.py  (+1 more)
debug/: db.py  example_scoring_response.json  scoring.py  submit_interview_debug.py
frontend/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
scripts/: increment-version.js  version-manager.js
(+157 files in other folders)
